--- a/views/admin.html
+++ b/views/admin.html
@@ -51,36 +51,8 @@
                                         <div class="col-lg-6 col-lg-offset-3 col-md-6 col-sm-12 col-xs-12">
                                             <div class="all-form-element-inner">
                                                 <form action="#">
-                                                    <div class="form-group-inner">
-                                                        <div class="row">
-                                                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                                <label class="login2 pull-right pull-right-pro font-white">Name</label>
-                                                            </div>
-                                                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input type="text" class="form-control" />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group-inner">
-                                                        <div class="row">
-                                                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                                <label class="login2 pull-right pull-right-pro font-white">Username</label>
-                                                            </div>
-                                                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input type="text" class="form-control" />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group-inner">
-                                                        <div class="row">
-                                                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                                <label class="login2 pull-right pull-right-pro font-white">Password</label>
-                                                            </div>
-                                                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input type="password" class="form-control" />
-                                                            </div>
-                                                        </div>
-                                                    </div>
+                                           
+                                           
                                                     <div class="form-group-inner">
                                                         <div class="row">
                                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -98,7 +70,7 @@
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                                 <div class="bt-df-checkbox">
-                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Dashboard</label>
+                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Home</label>
                                                                 </div>
                                                                 <div class="bt-df-checkbox">
                                                                     <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Tree View</label>
@@ -110,53 +82,53 @@
                                                                     <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Cart</label>
                                                                 </div>
                                                                 <div class="bt-df-checkbox">
-                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Profile</label>
+                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp profile settings</label>
                                                                 </div>
                                                                 <div class="bt-df-checkbox">
-                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Wallet</label>
+                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Cashout Request</label>
                                                                 </div>
                                                                 <div class="bt-df-checkbox">
-                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Settings</label>
+                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Website Settings</label>
                                                                 </div>
                                                                 <div class="bt-df-checkbox">
-                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Members Management</label>
+                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Activate Member</label>
                                                                 </div>
-                                                                <div class="bt-df-checkbox">
+                                                            <!--     <div class="bt-df-checkbox">
                                                                     <input class="pull-left" type="checkbox"><label class="font-white">&nbsp System Management</label>
+                                                                </div> -->
+                                                                <div class="bt-df-checkbox">
+                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Income Reports</label>
                                                                 </div>
                                                                 <div class="bt-df-checkbox">
-                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Reports</label>
+                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Compose Message</label>
                                                                 </div>
                                                                 <div class="bt-df-checkbox">
-                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp Mail System</label>
-                                                                </div>
-                                                                <div class="bt-df-checkbox">
-                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp General</label>
+                                                                    <input class="pull-left" type="checkbox"><label class="font-white">&nbsp All</label>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="row">
                                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                                <label class="login2 pull-right pull-right-pro font-white">Administrator Priviledges</label>
+                                                               <!--  <label class="login2 pull-right pull-right-pro font-white">Administrator Priviledges</label> -->
                                                             </div>
-                                                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
+                                                       <!--      <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                                 <div class="bt-df-checkbox">
                                                                     <input class="pull-left" type="checkbox">
                                                                 </div>
                                                             </div>
-                                                        </div>
+ -->                                                        </div>
                                                         <div class="form-group-inner">
                                                             <div class="row">
                                                                 <div class="col-lg-3 col-md-9 col-sm-9 col-xs-9">
-                                                                    <label class="login2 pull-right pull-right-pro"><span class="basic-ds-n font-white">Bootstrap</span> Default Radio</label>
+                                                              <!--       <label class="login2 pull-right pull-right-pro"><span class="basic-ds-n font-white">Bootstrap</span> Default Radio</label> -->
                                                                 </div>
                                                                 <div class="col-lg-9 col-md-3 col-sm-3 col-xs-3">
-                                                                    <div class="bt-df-checkbox">
+                                                            <!--         <div class="bt-df-checkbox">
                                                                         <input class="pull-left radio-checked" type="radio" checked="" value="option1" id="optionsRadios1" name="optionsRadios">
                                                                         <label class="font-white">Enabled</label>
                                                                         <input class="pull-left" type="radio" value="option2" id="optionsRadios2" name="optionsRadios">
                                                                         <label class="font-white">Disabled</label>
-                                                                    </div>
+                                                                    </div> -->
                                                                 </div>
                                                             </div>
                                                         </div>
