--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -104,11 +104,11 @@
                         </ul>
                     </li>
                     <li>
-                        <a class="has-arrow" href="mail" aria-expanded="false"><i class="icon nalika-mail icon-wrap"></i> <span class="mini-click-non">Mail System</span></a>
+                        <a class="has-arrow" href="mail" aria-expanded="false"><i class="icon nalika-mail icon-wrap"></i> <span class="mini-click-non">Messaging System</span></a>
                         <ul class="submenu-angle" aria-expanded="false">
-                            <li><a title="Notifications" href="inbox"><span class="mini-sub-pro">Inbox</span></a></li>
-                            <li><a title="Notifications" href="viewMail"><span class="mini-sub-pro">View Mail</span></a></li>
-                            <li><a title="Notifications" href="composeMail"><span class="mini-sub-pro">Compose Mail</span></a></li>
+                            <li><a title="Message List" href="messageList"><span class="mini-sub-pro">Message List</span></a></li>
+                            <li><a title="View Message" href="viewMessage"><span class="mini-sub-pro">View Message</span></a></li>
+                            <li><a title="Compose Message" href="composeMessage"><span class="mini-sub-pro">Compose Message</span></a></li>
                           
                         </ul>
                     </li>
@@ -702,10 +702,20 @@
                                           
                                         </ul>
                                     </li>
-                                    <li><a data-toggle="collapse" data-target="#Pagemail" href="#">Mail<span class="admin-project-icon nalika-icon nalika-down-arrow"></span></a>
+                      <!--                    <ul class="submenu-angle" aria-expanded="false">
+                            <li><a title="Message List" href="messageList"><span class="mini-sub-pro">Message List</span></a></li>
+                            <li><a title="View Message" href="viewMessage"><span class="mini-sub-pro">View Message</span></a></li>
+                            <li><a title="Compose Message" href="composeMessage"><span class="mini-sub-pro">Compose Message</span></a></li>
+                          
+                        </ul> -->
+                                    <li><a data-toggle="collapse" data-target="#Pagemail" href="#">Messaging<span class="admin-project-icon nalika-icon nalika-down-arrow"></span></a>
                                         <ul id="Pagerep" class="collapse dropdown-header-top">
                            
-                                            <li><a href="mail">Mail System</a>
+                                            <li><a href="messageList">Message List</a>
+                                            </li>
+                                                <li><a href="viewMessage">View Message</a>
+                                            </li>
+                                              <li><a href="composeMessage">Compose Message</a>
                                             </li>
                                           
                                         </ul>
