--- a/views/settings.html
+++ b/views/settings.html
@@ -98,7 +98,7 @@
                                                                 
                                                             </div>
                                                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                                                                <label class="font-white">Title:</label>
+                                                                <label class="font-white">Package:</label>
                                                             </div>
                                                      <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                                                         <label class="font-white" id="settingReferralTitle">----</label>
@@ -189,6 +189,11 @@
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
                                                         <input id="settingGenderEdit" type="text" class="form-control" placeholder="">
                                                     </div>
+                                                            <label>Bank Name</label>
+                                                    <div class="input-group mg-b-pro-edt">
+                                                        <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
+                                                        <input id="" type="text" class="form-control" placeholder="">
+                                                    </div>
                                                 
                                                 </div>
                                             </div>
@@ -219,6 +224,12 @@
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
                                                         <input id="settingUserIDEdit"  style="background: inherit;" disabled type="text" class="form-control" placeholder="">
                                                     </div>
+                                                                <label>Account Number</label>
+                                                    <div class="input-group mg-b-pro-edt">
+                                                        <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
+                                                        <input id="" type="text" class="form-control" placeholder="">
+                                                    </div>
+
                                                   
                                               
                                                 </div>
