--- a/views/viewMessage.html
+++ b/views/viewMessage.html
@@ -20,14 +20,10 @@
                                             </div> -->
                                             <div class="breadcomb-ctn row col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                            
-                                                    <h2>Mail Inbox</h2>
+                                                    <h2>Message View</h2>
                                           
                                             </div>
-                                            <form role="search" class="">
-                                                <input type="text" placeholder="Search By Username" class="form-control">
-                                                
-                                                
-                                            </form>
+                                      
                                         </div>
                                 
                               
@@ -48,46 +44,15 @@
             <div class="mailbox-area mg-tb-15">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-3 col-md-3 col-sm-3 col-xs-12">
-                            <div class="hpanel responsive-mg-b-30">
-                                <div class="panel-body">
-    
-                                    <ul class="mailbox-list ">
-                                        <li><button class="font-white btn btn-group" style="text-align: center;background-color: red;">Compose Mail</button></li>
-                                        <li class="active">
-                                            
-                                            <a href="#">
-                                                    <span class="pull-right">12</span>
-                                                    <i class="fa fa-envelope"></i> Inbox
-                                                </a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><i class="fa fa-paper-plane"></i> Sent</a>
-                                        </li>
-                                   
-                                        <li>
-                                            <a href="#"><i class="fa fa-trash"></i> Trash</a>
-                                        </li>
-                                    </ul>
-                                    <hr>
-                                    <ul class="mailbox-list">
-                              
-                                    </ul>
-                                   
-                                    <ul class="mailbox-list">
-                                    
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-9 col-md-9 col-sm-9 col-xs-12">
+                       
+                        <div class="col-md-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="hpanel email-compose mailbox-view mg-b-15">
                                 <div class="panel-heading hbuilt">
     
                                     <div class="p-xs h4">
-                                        <small class="pull-right">
+                                       <!--  <small class="pull-right">
                                                 08:26 PM (16 hours ago)
-                                            </small> Email view
+                                            </small> Email view -->
     
                                     </div>
                                 </div>
@@ -122,57 +87,16 @@
                                     </div>
                                 </div>
     
-                                <div class="border-bottom border-left border-right bg-white mg-tb-15">
-                                    <p class="m-b-md">
-                                        <span><i class="fa fa-paperclip"></i> 3 attachments - </span>
-                                        <a href="#" class="btn btn-default btn-xs">Download all in zip format <i class="fa fa-file-zip-o"></i> </a>
-                                    </p>
-    
-                                    <div>
-                                        <div class="row">
-                                            <div class="col-sm-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="hpanel">
-                                                    <div class="panel-body file-body incon-ctn-view">
-                                                        <i class="fa fa-file-pdf-o text-info"></i>
-                                                    </div>
-                                                    <div class="panel-footer">
-                                                        <a href="#">Document_2016.doc</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-sm-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="hpanel">
-                                                    <div class="panel-body file-body incon-ctn-view">
-                                                        <i class="fa fa-file-audio-o text-warning"></i>
-                                                    </div>
-                                                    <div class="panel-footer">
-                                                        <a href="#">Audio_2016.doc</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-sm-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="hpanel">
-                                                    <div class="panel-body file-body incon-ctn-view">
-                                                        <i class="fa fa-file-excel-o text-success"></i>
-                                                    </div>
-                                                    <div class="panel-footer">
-                                                        <a href="#">Sheets_2016.doc</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-    
-                                    </div>
-                                </div>
+                            
     
                                 <div class="panel-footer text-right">
-                                    <div class="btn-group">
+                              <!--       <div class="btn-group">
                                         <button class="btn btn-default"><i class="fa fa-reply"></i> Reply</button>
                                         <button class="btn btn-default"><i class="fa fa-arrow-right"></i> Forward</button>
                                         <button class="btn btn-default"><i class="fa fa-print"></i> Print</button>
                                         <button class="btn btn-default"><i class="fa fa-trash-o"></i> Remove</button>
                                     </div>
-                                </div>
+ -->                                </div>
                             </div>
                         </div>
                     </div>
