--- a/views/messageList.html
+++ b/views/messageList.html
@@ -20,7 +20,7 @@
                                             </div> -->
                                             <div class="breadcomb-ctn row col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                            
-                                                    <h2>Mail Inbox</h2>
+                                                    <h2>Message List</h2>
                                           
                                             </div>
                                             <form role="search" class="">
@@ -48,7 +48,7 @@
             <div class="mailbox-area mg-tb-15">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-3 col-md-3 col-sm-3 col-xs-12">
+                     <!--    <div class="col-md-3 col-md-3 col-sm-3 col-xs-12">
                             <div class="hpanel responsive-mg-b-30">
                                 <div class="panel-body">
     
@@ -79,8 +79,8 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-9 col-md-9 col-sm-9 col-xs-12">
+                        </div> -->
+                        <div class="col-md-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="hpanel mg-b-15">
                                 <div class="panel-heading hbuilt mailbox-hd">
                                     <div class="text-center p-xs font-normal">
@@ -92,14 +92,14 @@
                                 <div class="panel-body">
                                     <div class="row">
                                         <div class="col-md-6 col-md-6 col-sm-6 col-xs-12 mg-b-15">
-                                            <div class="btn-group">
+                                      <!--       <div class="btn-group">
                                                 <button class="btn btn-default btn-sm"><i class="fa fa-refresh"></i> Refresh</button>
                                                 <button class="btn btn-default btn-sm"><i class="fa fa-eye"></i></button>
                                                 <button class="btn btn-default btn-sm"><i class="fa fa-exclamation"></i></button>
                                                 <button class="btn btn-default btn-sm"><i class="fa fa-trash-o"></i></button>
                                                 <button class="btn btn-default btn-sm"><i class="fa fa-check"></i></button>
                                                 <button class="btn btn-default btn-sm"><i class="fa fa-tag"></i></button>
-                                            </div>
+                                            </div> -->
                                         </div>
                                         <div class="col-md-6 col-md-6 col-sm-6 col-xs-12 mailbox-pagination mg-b-15">
                                             <div class="btn-group">
@@ -111,7 +111,7 @@
                                     <div class="table-responsive">
                                         <table class="table table-hover table-mailbox">
                                             <tbody>
-                                           
+                                           <tr>
                                                     <td class="unread">
                                                         <div class="checkbox">
                                                             <input type="checkbox">
@@ -120,60 +120,24 @@
                                                     </td>
                                                     <td><a href="#">Brent Rasmussen</a></td>
                                                     <td><a href="#">Nam nec turpis sed quam tristique sodales.</a></td>
-                                                    <td></td>
+                                                    <td><button class="btn btn-default btn-sm"><i class="fa fa-trash-o"></i></button></td>
                                                     <td class="text-right mail-date">Sun, Nov 15</td>
                                                 </tr>
-                                                <tr class="unread">
-                                                    <td class="">
-                                                        <div class="checkbox checkbox-single checkbox-success">
-                                                            <input type="checkbox" checked>
-                                                            <label></label>
-                                                        </div>
-                                                    </td>
-                                                    <td><a href="#">Joseph Hurley</a></td>
-                                                    <td><a href="#">Nullam tempus leo id urna sagittis blandit.</a></td>
-                                                    <td><i class="fa fa-paperclip"></i></td>
-                                                    <td class="text-right mail-date">Sun, Aug 10</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="">
+                                                           <tr>
+                                                    <td class="unread">
                                                         <div class="checkbox">
                                                             <input type="checkbox">
                                                             <label></label>
                                                         </div>
                                                     </td>
-                                                    <td><a href="#">Alan Matthews</a></td>
-                                                    <td><a href="#">Quisque quis turpis ac quam sagittis scelerisque vel ut
-                                                            urna.</a></td>
-                                                    <td></td>
-                                                    <td class="text-right mail-date">Sun, Mar 27</td>
+                                                    <td><a href="#">Brent Rasmussen</a></td>
+                                                    <td><a href="#">Nam nec turpis sed quam tristique sodales.</a></td>
+                                                    <td><button class="btn btn-default btn-sm"><i class="fa fa-trash-o"></i></button></td>
+                                                    <td class="text-right mail-date">Sun, Nov 15</td>
                                                 </tr>
-                                                <tr class="active">
-                                                    <td class="">
-                                                        <div class="checkbox">
-                                                            <input type="checkbox">
-                                                            <label></label>
-                                                        </div>
-                                                    </td>
-                                                    <td><a href="#">Colby Lynch</a> <span class="label label-danger">Travel</span></td>
-                                                    <td><a href="#">Donec non enim pulvinar, ultrices metus eget, condimentum
-                                                            mi.</a></td>
-                                                    <td></td>
-                                                    <td class="text-right mail-date">Thu, Dec 31</td>
-                                                </tr>
-                                                <tr class="unread ">
-                                                    <td class="">
-                                                        <div class="checkbox checkbox-single checkbox-success">
-                                                            <input type="checkbox" checked>
-                                                            <label></label>
-                                                        </div>
-                                                    </td>
-                                                    <td><a href="#">Jeremy Massey</a></td>
-                                                    <td><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a>
-                                                    </td>
-                                                    <td><i class="fa fa-paperclip"></i></td>
-                                                    <td class="text-right mail-date">Tue, Nov 25</td>
-                                                </tr>
+                                      
+                                         
+                                         
                                           
                                              
                                             
@@ -182,7 +146,7 @@
                                     </div>
                                 </div>
                                 <div class="panel-footer">
-                                    <i class="fa fa-eye"> </i> 6 unread
+                                   
                                 </div>
                             </div>
                         </div>
